# companybrain

./: .dockerignore  .env.example  .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  PRODUCT.md  README.md  SECURITY.md  docker-compose.yml  fly.toml  package.json  pnpm-lock.yaml  railway.json  render.yaml  tsconfig.base.json  turbo.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker.yml  pages.yml  publish-images.yml  stale.yml
apps/api/: Dockerfile  README.md  package.json  tsconfig.json
apps/cli/: README.md  package.json  tsconfig.json
apps/extension/: README.md  background.js  content.js  manifest.json  options.css  options.html  options.js  popup.css  popup.html  popup.js
apps/mcp/: README.md  package.json
apps/web/: Dockerfile  README.md  next.config.mjs  package.json  tsconfig.json
bench/: BEIR.md  README.md  beir.mts  corpus.json  probes.json  run.mjs  trec_eval.py
docs/: api.md  architecture.md  comparison.md  connectors.md  deploy.md  publishing.md  quickstart.md  self-hosting.md  slack.md  why-companybrain.md
examples/: README.md
examples/curl/: README.md  run.sh
examples/ingest-folder/: README.md  ingest.ts  (+2 more)
landing/: 404.html  benchmarks.html  index.html  robots.txt  sitemap.xml
sdks/python/: README.md  pyproject.toml
sdks/python/src/companybrain/: __init__.py  _common.py  async_client.py  client.py  types.py
sdks/python/tests/: test_client.py  test_streaming.py
(+93 files in other folders)
